templates/datalake-security-groups.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This template creates the security groups for the Cloudwick Datalake solution.",
    "Parameters": {
        "VPC": {
            "Description": "VPC ID for Security groups",
            "Type": "String"
        },
        "VPCCIDR": {
            "Description": "VPC CIDR",
            "Type": "String"
        }
    },
    "Resources": {
        "WebserverSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow access to Ec2 web server portal (AWS Quick Start)",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "SourceSecurityGroupId": {
                            "Fn::GetAtt": [
                                "ELBSecurityGroup",
                                "GroupId"
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "SourceSecurityGroupId": {
                            "Fn::GetAtt": [
                                "ELBSecurityGroup",
                                "GroupId"
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "VPCCIDR"
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "IpProtocol": "-1"
                    }
                ]
            }
        },
        "ELBSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow access to Ec2 web server portal (AWS Quick Start) through the ELB",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "IpProtocol": "-1"
                    }
                ]
            }
        },
        "RedshiftSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Redshift Security Group (AWS Quick Start)",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5439",
                        "ToPort": "5439",
                        "SourceSecurityGroupId": {
                            "Fn::GetAtt": [
                                "WebserverSecurityGroup",
                                "GroupId"
                            ]
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "IpProtocol": "-1"
                    }
                ]
            }
        },
        "RDSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "RDS Security Group (AWS Quick Start)",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3306",
                        "ToPort": "3306",
                        "SourceSecurityGroupId": {
                            "Fn::GetAtt": [
                                "WebserverSecurityGroup",
                                "GroupId"
                            ]
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "IpProtocol": "-1"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "ELBSecurityGroup": {
            "Description": "WebServer ELB Security Group",
            "Value": {
                "Ref": "ELBSecurityGroup"
            }
        },
        "RDSSecurityGroup": {
            "Description": "RDS Security Group",
            "Value": {
                "Ref": "RDSSecurityGroup"
            }
        },
        "RedshiftSecurityGroup": {
            "Description": "Redshift Security Group",
            "Value": {
                "Ref": "RedshiftSecurityGroup"
            }
        },
        "WebserverSecurityGroup": {
            "Description": "Web Server Security Group",
            "Value": {
                "Ref": "WebserverSecurityGroup"
            }
        }
    }
}
